[AMQCPP-188] - Waking up synchronous consumers on a call to consumer.close()

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@675606 13f79535-47bb-0310-9956-ffa450edef68